2005-09-03 Seiichi SATO <ssato@sh.rim.or.jp>

	* tool/mlconfig/po/de.po:
	applied a patch from Jens Seidel. (Debian BTS #313970)

2005-09-04 Seiichi SATO <ssato@sh.rim.or.jp>

	* kiklib/configure.in:
	applied a patch from Mike FABIAN. (SUSE Bug #105320)

2005-09-04 Seiichi SATO <ssato@sh.rim.or.jp>

	* kiklib/configure.in: suppress libxpg4 check, if setlocale() is
	available in libc. (Thanks to SHIOTA Shoichi and MANTANI Nobutaka)

2005-09-04 Seiichi SATO <ssato@sh.rim.or.jp>

	* doc/ja/README.ja: fixed typo. (Thanks to SHIOTA Shoichi)

2005-09-01 Seiichi SATO <ssato@sh.rim.or.jp>

	* contrib/scrollbar/pixmap_engine/HOWTO.html: fixed typo.

2005-08-31 Seiichi SATO <ssato@sh.rim.or.jp>

	* kiklib/configure.in: fixed a bug that kiklib didn't link libutmpter
	even if available. (SUSE Bug #105320)

2005-05-23 MINAMI Hirokazu <minami@mistfall.nrt>

	* xwindow/x_scrollbar.c:
	applied a patch from Takeshi Hakamata. (SF Bug #1206515)

2005-03-31 Seiichi SATO <ssato@sh.rim.or.jp>

	* inputmethod/iiimf/aux.c:
	applied a patch from Andreas Jochens. (Debian BTS #302231)

2005-03-18 Seiichi SATO <ssato@sh.rim.or.jp>

	* inputmethod/kbd/im_kbd.c: added Hebrew key mapping table.
	* README, doc/ja/README.ja, man/mlterm.1: updated.

2005-03-14 Seiichi SATO <ssato@sh.rim.or.jp>

	* mlterm/ml_screen.c (receive_scrolled_out_line): if backscrolling
	mode is BTS_NONE, do nothing to make the scroll caching mechanism in
	x_screen.c to work correctly. (#1161050)

2005-03-13 Seiichi SATO <ssato@sh.rim.or.jp>

	* kiklib/src/Makefile.in, mkf/lib/Makefile.in,
	  inputmethod/iiimf/Makefile.in, inputmethod/kbd/Makefile.in,
	  inputmethod/m17nlib/Makefile.in, inputmethod/scim/Makefile.in,
	  inputmethod/uim/Makefile.in, contrib/scrollbar/extra/Makefile.in,
	  contrib/scrollbar/pixmap_engine/Makefile.in:
	  fixed incorrect paths for -rpath of libtool. (#1161055)

2005-03-10 MINAMI Hirokazu <minami@mistfall.net>

	* xwindow/x_imagelib_gdk.c: don't try to be translucent